--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,5 +10,7 @@
 <p><%= post.data.substr(0,100) %>...</p><a href="/posts/<%= post.title %>">Read More</a>
 <%});%>
 
+<a href= "https://overgrownpanda.wordpress.com"> Palacio </a>
+
 
 <%- include('partials/footer') -%>
